--- a/index.html
+++ b/index.html
@@ -70,7 +70,10 @@
              <option value="6">Azul</option>
              <option value="7">Violeta</option>
              <option value="8">Gris</option>
-             <option value="9">Blanco</option>             
+             <option value="9">Blanco</option> 
+			 <option value="9">morado</option>
+			 <option value="9">naranja</option>
+			 <option value="9">purpura</option>
           </select>
           </label>
           <label>Tolerancia:
@@ -78,7 +81,8 @@
              <option value="-1">Selecciona...</option>
              <option value="20">Sin color</option>
              <option value="10">Plateado</option>
-             <option value="5">Dorado</option>        
+             <option value="5">Dorado</option> 
+			 
           </select>
         <a href="#" data-role="button" data-theme="b" id="boton">Calcular</a>
         <div data-role="collapsible-set" id="resultado" data-theme="c" data-content-theme="d" data-mini="true">
