en el apartado de tolerancia agregue dos colores el verde y el azul

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
              <option value="20">Sin color</option>
              <option value="10">Plateado</option>
              <option value="5">Dorado</option> 
-			 
+			 <option value="7">verde</option> 
+			 <option value="6">azul</option> 
           </select>
         <a href="#" data-role="button" data-theme="b" id="boton">Calcular</a>
         <div data-role="collapsible-set" id="resultado" data-theme="c" data-content-theme="d" data-mini="true">
